--- a/index.html
+++ b/index.html
@@ -26,12 +26,24 @@
 </body>
 <section class="main-section">
     <div class="manu-section">
+        <button class="manu-button">>
+                <a target="_blank" href=""> Upcomming match</a>
+        </button>
         <button class="manu-button">
-            <a href="">Upcomming match</a>
             <a href="">All Group</a>
+        </button>
+        <button class="manu-button">
             <a href="">Blog</a>
         </button>
     </div>
-    <div class="blog-section"></div>
+    <div class="blog-section">
+        <div class="blog-item">
+            <img src="assets/Blog Image.png" alt=""><br>
+            <button class="transfer-button">
+                <a href="">Transfer</a>
+            </button>
+            <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+        </div>
+    </div>
 </section>
 </html>
