--- a/index.html
+++ b/index.html
@@ -117,6 +117,44 @@
             </div>
         </div>
     </section>
+    <section class="footer-section">
+        <h1 class="goal">Goal</h1><u></u>
+        
+        <div class="footer-info">
+            <ul>
+                <li>
+                    <a href="">Cotact us</a>
+                </li>
+                <li>
+                    <a href="">Terms of service</a>
+                </li>
+                <li>
+                    <a href="">Privacy Policy</a>
+                </li>
+                <li>
+                    <a href="">privacy setting</a>
+                </li>
+                <li>
+                    <a href="">Goal</a>
+                </li>
+                <li>
+                    <a href="">Goal Live</a>
+                </li>
+            </ul>
+        </div>
+        <div class="social-icon">
+            <a href="">
+                <i class="fa-brands fa-facebook"></i>
+            </a>
+            <a href="">
+                <i class="fa-brands fa-instagram"></i>
+            </a>
+            <a href="">
+                <i class="fa-brands fa-twitter"></i>
+            </a>
+        </div>
+
+    </section>
 
 
 
