--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
     <section class="main-section">
         <div class="manu-section">
             <button class="manu-button">>
-                    <a target="_blank" href=""> Upcomming match</a>
+                    <a target="_blank" href="upcamming.html">Upcomming Match</a>
             </button>
             <button class="manu-button">
-                <a href="">All Group</a>
+                <a target="_blank" href="">All Group</a>
             </button>
             <button class="manu-button">
-                <a href="">Blog</a>
+                <a target="_blank" href="">Blog</a>
             </button>
         </div>
         <div class="blog-section">
